; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/extr_splitter.c_video_splitter_CreateWindow.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/extr_splitter.c_video_splitter_CreateWindow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32, i32 }
%struct.TYPE_5__ = type { i8*, i32* }

@__const.video_splitter_CreateWindow.cfg = private unnamed_addr constant %struct.TYPE_6__ { i32 1, i32 0, i32 0 }, align 4
@vlc_vidsplit_window_cbs = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32*, i8*)* @video_splitter_CreateWindow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @video_splitter_CreateWindow(i32* %0, i32* noalias %1, i32* noalias %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_6__, align 4
  %10 = alloca %struct.TYPE_5__, align 8
  %11 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i8* %3, i8** %8, align 8
  %12 = bitcast %struct.TYPE_6__* %9 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %12, i8* align 4 bitcast (%struct.TYPE_6__* @__const.video_splitter_CreateWindow.cfg to i8*), i64 12, i1 false)
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %14 = load i8*, i8** %8, align 8
  store i8* %14, i8** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 1
  store i32* @vlc_vidsplit_window_cbs, i32** %15, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 2
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 1
  %18 = load i32*, i32** %7, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @vout_display_GetDefaultDisplaySize(i32* %16, i32* %17, i32* %18, i32* %19)
  %21 = load i32*, i32** %5, align 8
  %22 = call i32* @vout_window_New(i32* %21, i32* null, %struct.TYPE_5__* %10)
  store i32* %22, i32** %11, align 8
  %23 = load i32*, i32** %11, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %25, label %33

25:                                               ; preds = %4
  %26 = load i32*, i32** %11, align 8
  %27 = call i64 @vout_window_Enable(i32* %26, %struct.TYPE_6__* %9)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %25
  %30 = load i32*, i32** %11, align 8
  %31 = call i32 @vout_window_Delete(i32* %30)
  store i32* null, i32** %11, align 8
  br label %32

32:                                               ; preds = %29, %25
  br label %33

33:                                               ; preds = %32, %4
  %34 = load i32*, i32** %11, align 8
  ret i32* %34
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @vout_display_GetDefaultDisplaySize(i32*, i32*, i32*, i32*) #2

declare dso_local i32* @vout_window_New(i32*, i32*, %struct.TYPE_5__*) #2

declare dso_local i64 @vout_window_Enable(i32*, %struct.TYPE_6__*) #2

declare dso_local i32 @vout_window_Delete(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
